--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -160,7 +160,7 @@
    "source": [
     "## Transform coordinate systems to another reference system\n",
     "\n",
-    "After all coordinate systems are added to the `CoordinateSystemManager`, getting a coordinate system in relation to any other reference system in form of a `LocalCoordinateSystem` class is quite easy. Simply call `get_local_coordinate_system`. The name of the system that should be transformed is passed to the function as first parameter. The second parameter is the name of the target reference system. If it is omitted, the parent system is used as reference."
+    "After all coordinate systems are added to the `CoordinateSystemManager`, getting a coordinate system in relation to any other reference system in form of a `LocalCoordinateSystem` class is quite easy. Simply call `get_cs`. The name of the system that should be transformed is passed to the function as first parameter. The second parameter is the name of the target reference system. If it is omitted, the parent system is used as reference."
    ]
   },
   {
@@ -169,13 +169,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lcs_torch_in_root = csm.get_local_coordinate_system(\"torch\", \"root\")\n",
-    "lcs_flange_in_root = csm.get_local_coordinate_system(\"flange\")\n",
-    "lcs_specimen_in_root = csm.get_local_coordinate_system(\"specimen\")\n",
+    "lcs_torch_in_root = csm.get_cs(\"torch\", \"root\")\n",
+    "lcs_flange_in_root = csm.get_cs(\"flange\")\n",
+    "lcs_specimen_in_root = csm.get_cs(\"specimen\")\n",
     "\n",
-    "lcs_root_in_torch = csm.get_local_coordinate_system(\"root\", \"torch\")\n",
-    "lcs_flange_in_torch = csm.get_local_coordinate_system(\"flange\", \"torch\")\n",
-    "lcs_specimen_in_torch = csm.get_local_coordinate_system(\"specimen\", \"torch\")"
+    "lcs_root_in_torch = csm.get_cs(\"root\", \"torch\")\n",
+    "lcs_flange_in_torch = csm.get_cs(\"flange\", \"torch\")\n",
+    "lcs_specimen_in_torch = csm.get_cs(\"specimen\", \"torch\")"
    ]
   },
   {
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "csm.get_local_coordinate_system(\"torch\", \"flange\")"
+    "csm.get_cs(\"torch\", \"flange\")"
    ]
   },
   {
@@ -600,7 +600,7 @@
    "source": [
     "## Time dependencies\n",
     "\n",
-    "As described in the previous tutorial about the `LocalCoordinateSystem` class, the orientation of a coordinate system towards its reference system might vary in time. Form the API side, time dependent coordinate systems are not treated any different than constant coordinate systems. However, the `get_local_coordinate_system` function needs to perform some time interpolations internally if the timestamps of all involved coordinate systems aren't identical. You might wonder which timestamps the resulting interpolated `LocalCoordinateSystem` possesses. The default behavior is that its timestamps are the time union of all coordinate systems participating in the transformation. However, you can also provide the desired timestamps as a `pandas.DatetimeIndex` object using the `time` parameter of the `get_local_coordinate_system` function. Another method is to pass the name of a coordinate system that should provide the timestamps to the `time` parameter.\n",
+    "As described in the previous tutorial about the `LocalCoordinateSystem` class, the orientation of a coordinate system towards its reference system might vary in time. Form the API side, time dependent coordinate systems are not treated any different than constant coordinate systems. However, the `get_cs` function needs to perform some time interpolations internally if the timestamps of all involved coordinate systems aren't identical. You might wonder which timestamps the resulting interpolated `LocalCoordinateSystem` possesses. The default behavior is that its timestamps are the time union of all coordinate systems participating in the transformation. However, you can also provide the desired timestamps as a `pandas.DatetimeIndex` object using the `time` parameter of the `get_cs` function. Another method is to pass the name of a coordinate system that should provide the timestamps to the `time` parameter.\n",
     "\n",
     "Let's define a new `CoordinateSystemManager` to demonstrate the different approaches:"
    ]
@@ -663,26 +663,26 @@
    "outputs": [],
    "source": [
     "# default\n",
-    "lcs_parent_in_root_default = csm_tdp.get_local_coordinate_system(\"parent\")\n",
-    "lcs_child_in_root_default = csm_tdp.get_local_coordinate_system(\"child\", \"root\")\n",
-    "lcs_childchild_in_root_default = csm_tdp.get_local_coordinate_system(\n",
+    "lcs_parent_in_root_default = csm_tdp.get_cs(\"parent\")\n",
+    "lcs_child_in_root_default = csm_tdp.get_cs(\"child\", \"root\")\n",
+    "lcs_childchild_in_root_default = csm_tdp.get_cs(\n",
     "    \"child child\", \"root\"\n",
     ")\n",
     "\n",
     "# specific times\n",
     "time = pd.TimedeltaIndex([12 * (i + 1) for i in range(12)], \"H\")\n",
-    "lcs_parent_in_root_time = csm_tdp.get_local_coordinate_system(\"parent\", time=time)\n",
-    "lcs_child_in_root_time = csm_tdp.get_local_coordinate_system(\"child\", \"root\", time=time)\n",
-    "lcs_childchild_in_root_time = csm_tdp.get_local_coordinate_system(\n",
+    "lcs_parent_in_root_time = csm_tdp.get_cs(\"parent\", time=time)\n",
+    "lcs_child_in_root_time = csm_tdp.get_cs(\"child\", \"root\", time=time)\n",
+    "lcs_childchild_in_root_time = csm_tdp.get_cs(\n",
     "    \"child child\", \"root\", time=time\n",
     ")\n",
     "\n",
     "# reference system\n",
-    "lcs_parent_in_root_ref = csm_tdp.get_local_coordinate_system(\"parent\", time=\"parent\")\n",
-    "lcs_child_in_root_ref = csm_tdp.get_local_coordinate_system(\n",
+    "lcs_parent_in_root_ref = csm_tdp.get_cs(\"parent\", time=\"parent\")\n",
+    "lcs_child_in_root_ref = csm_tdp.get_cs(\n",
     "    \"child\", \"root\", time=\"parent\"\n",
     ")\n",
-    "lcs_childchild_in_root_ref = csm_tdp.get_local_coordinate_system(\n",
+    "lcs_childchild_in_root_ref = csm_tdp.get_cs(\n",
     "    \"child child\", \"root\", time=\"parent\"\n",
     ")"
    ]
@@ -790,32 +790,32 @@
     "# default interpolation -------------------------\n",
     "csm_tdp_interp = csm_tdp.interp_time(time_new)\n",
     "\n",
-    "assert np.all(csm_tdp_interp.get_local_coordinate_system(\"parent\").time == time_new)\n",
-    "assert np.all(csm_tdp_interp.get_local_coordinate_system(\"child\").time == time_new)\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"parent\").time == time_new)\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"child\").time == time_new)\n",
     "assert np.all(\n",
-    "    csm_tdp_interp.get_local_coordinate_system(\"child child\").time == time_new\n",
+    "    csm_tdp_interp.get_cs(\"child child\").time == time_new\n",
     ")\n",
     "\n",
     "# selective interpolation -----------------------\n",
     "csm_tdp_interp = csm_tdp.interp_time(time_new, affected_coordinate_systems=[\"child\", \"child child\"])\n",
     "\n",
     "assert np.all(\n",
-    "    csm_tdp_interp.get_local_coordinate_system(\"parent\").time\n",
-    "    == csm_tdp.get_local_coordinate_system(\"parent\").time\n",
+    "    csm_tdp_interp.get_cs(\"parent\").time\n",
+    "    == csm_tdp.get_cs(\"parent\").time\n",
     ")\n",
-    "assert np.all(csm_tdp_interp.get_local_coordinate_system(\"child\").time == time_new)\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"child\").time == time_new)\n",
     "assert np.all(\n",
-    "    csm_tdp_interp.get_local_coordinate_system(\"child child\").time == time_new\n",
+    "    csm_tdp_interp.get_cs(\"child child\").time == time_new\n",
     ")\n",
     "\n",
     "# in place interpolation ------------------------\n",
     "csm_tdp_interp = deepcopy(csm_tdp)\n",
     "csm_tdp_interp.interp_time(time_new, in_place=True)\n",
     "\n",
-    "assert np.all(csm_tdp_interp.get_local_coordinate_system(\"parent\").time == time_new)\n",
-    "assert np.all(csm_tdp_interp.get_local_coordinate_system(\"child\").time == time_new)\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"parent\").time == time_new)\n",
+    "assert np.all(csm_tdp_interp.get_cs(\"child\").time == time_new)\n",
     "assert np.all(\n",
-    "    csm_tdp_interp.get_local_coordinate_system(\"child child\").time == time_new\n",
+    "    csm_tdp_interp.get_cs(\"child child\").time == time_new\n",
     ")\n",
     "\n"
    ]
