--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -495,11 +495,11 @@
     "    label=\"groove\",\n",
     ")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_contact\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_contact\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_contact\", c=\"r\", marker=\"o\")\n",
     "\n",
@@ -544,7 +544,7 @@
    ],
    "source": [
     "for T in [\"T1\", \"T2\", \"T3\"]:\n",
-    "    cs = csm.get_local_coordinate_system(T, \"workpiece\")\n",
+    "    cs = csm.get_cs(T, \"workpiece\")\n",
     "    data = cs.coordinates.data\n",
     "    ax.scatter(data[0], data[1], data[2], label=T, c=\"orange\", marker=\"o\")\n",
     "ax.legend()"
