--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -257,7 +257,7 @@
     "    label=\"groove\",\n",
     ")\n",
     "\n",
-    "cs = cs = csm.get_local_coordinate_system(\"tcp_wire\", \"workpiece\")\n",
+    "cs = cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
     "\n",
@@ -385,11 +385,11 @@
     "    label=\"groove\",\n",
     ")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_sine\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_sine\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_contact\", c=\"r\")\n",
     "\n",
@@ -477,11 +477,11 @@
     "    label=\"groove\",\n",
     ")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\", marker=\"o\")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire_sine\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_wire_sine\", \"workpiece\")\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_contact\", c=\"r\")\n",
     "\n",
@@ -544,11 +544,11 @@
     "    label=\"groove\",\n",
     ")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire\", \"workpiece\").interp_time(t_interp)\n",
+    "cs = csm.get_cs(\"tcp_wire\", \"workpiece\").interp_time(t_interp)\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire\", c=\"g\")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire_sine\", \"workpiece\").interp_time(t_interp)\n",
+    "cs = csm.get_cs(\"tcp_wire_sine\", \"workpiece\").interp_time(t_interp)\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire_sine\", c=\"r\")\n",
     "\n",
@@ -691,7 +691,7 @@
     "    label=\"groove\",\n",
     ")\n",
     "\n",
-    "cs = csm.get_local_coordinate_system(\"tcp_wire_sine2\", \"workpiece\")\n",
+    "cs = csm.get_cs(\"tcp_wire_sine2\", \"workpiece\")\n",
     "# cs = tcp_wire_sine2\n",
     "data = cs.coordinates.data\n",
     "ax.plot(data[:, 0], data[:, 1], data[:, 2], label=\"tcp_wire_sine2\", c=\"r\")\n",
