Turn some methods into properties

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -988,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All coordinate systems are now collected in a single `CoordinateSystemManager`. We can extract the previously merged subsystems with the function `get_sub_systems`. It returns a list with the `CoordinateSystemManager` instances:"
+    "All coordinate systems are now collected in a single `CoordinateSystemManager`. We can extract the previously merged subsystems with the function `sub_systems`. It returns a list with the `CoordinateSystemManager` instances:"
    ]
   },
   {
@@ -1006,7 +1006,7 @@
     }
    ],
    "source": [
-    "csm_list = csm_global.get_sub_systems()\n",
+    "csm_list = csm_global.sub_systems()\n",
     "for sub_csm in csm_list:\n",
     "    print(sub_csm.name)"
    ]
@@ -1044,7 +1044,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might have noticed, that there is no `CoordinateSystemManager` for the scanner systems. The reason for this is that it is a subsystem of the robot coordinate systems and `get_sub_systems` does not recursively extract nested subsystems. However, we can simply call `get_sub_systems` a second time to get it:"
+    "You might have noticed, that there is no `CoordinateSystemManager` for the scanner systems. The reason for this is that it is a subsystem of the robot coordinate systems and `sub_systems` does not recursively extract nested subsystems. However, we can simply call `sub_systems` a second time to get it:"
    ]
   },
   {
@@ -1063,14 +1063,14 @@
    "source": [
     "for sub_csm in csm_list:\n",
     "    if sub_csm.name == \"robot coordinate systems\":\n",
-    "        print(sub_csm.get_sub_systems()[0].name)"
+    "        print(sub_csm.sub_systems()[0].name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using `get_sub_systems` does not affect the state of the current `CoordinateSystemManager`:"
+    "Using `sub_systems` does not affect the state of the current `CoordinateSystemManager`:"
    ]
   },
   {
@@ -1121,7 +1121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, if you want to decompose a `CoordinateSystemManager` instance into all its subsystems, you can use the `unmerge` function. It works exactly the same as `get_sub_systems` with the difference that it also removes all subsystem data from the affected `CoordinateSystemManager` instance."
+    "Alternatively, if you want to decompose a `CoordinateSystemManager` instance into all its subsystems, you can use the `unmerge` function. It works exactly the same as `sub_systems` with the difference that it also removes all subsystem data from the affected `CoordinateSystemManager` instance."
    ]
   },
   {
