Fix a naming inconsistency

--- a/tutorials/transformations_02_coordinate_system_manager.ipynb
+++ b/tutorials/transformations_02_coordinate_system_manager.ipynb
@@ -1000,7 +1000,7 @@
    "metadata": {},
    "source": [
     "All coordinate systems are now collected in a single `CoordinateSystemManager`.\n",
-    "We can extract the previously merged subsystems with the function `sub_systems` property.\n",
+    "We can extract the previously merged subsystems with the function `subsystems` property.\n",
     "It returns a list with the `CoordinateSystemManager` instances:"
    ]
   },
@@ -1019,7 +1019,7 @@
     }
    ],
    "source": [
-    "csm_list = csm_global.sub_systems\n",
+    "csm_list = csm_global.subsystems\n",
     "for sub_csm in csm_list:\n",
     "    print(sub_csm.name)"
    ]
@@ -1058,8 +1058,8 @@
    "metadata": {},
    "source": [
     "You might have noticed, that there is no `CoordinateSystemManager` for the scanner systems.\n",
-    "The reason for this is that it is a subsystem of the robot coordinate systems and the `sub_systems` property does not recursively extract nested subsystems.\n",
-    "However, we can simply use `sub_systems` a second time to get it:"
+    "The reason for this is that it is a subsystem of the robot coordinate systems and the `subsystems` property does not recursively extract nested subsystems.\n",
+    "However, we can simply use `subsystems` a second time to get it:"
    ]
   },
   {
@@ -1078,14 +1078,14 @@
    "source": [
     "for sub_csm in csm_list:\n",
     "    if sub_csm.name == \"robot coordinate systems\":\n",
-    "        print(sub_csm.sub_systems[0].name)"
+    "        print(sub_csm.subsystems[0].name)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the `sub_systems` property does not affect the state of the current `CoordinateSystemManager`:"
+    "Using the `subsystems` property does not affect the state of the current `CoordinateSystemManager`:"
    ]
   },
   {
@@ -1137,7 +1137,7 @@
    "metadata": {},
    "source": [
     "Alternatively, if you want to decompose a `CoordinateSystemManager` instance into all its subsystems, you can use the `unmerge` function.\n",
-    "It works exactly the same as the `sub_systems` property with the difference that it also removes all subsystem data from the affected `CoordinateSystemManager` instance."
+    "It works exactly the same as the `subsystems` property with the difference that it also removes all subsystem data from the affected `CoordinateSystemManager` instance."
    ]
   },
   {
