added interactive plot.

--- a/tutorials/groove_selection_dashboard.ipynb
+++ b/tutorials/groove_selection_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,12 @@
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "from ipywidgets import Checkbox, VBox, HBox, Label"
+    "from ipywidgets import Checkbox, VBox, HBox, Label\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "from weldx.constants import WELDX_QUANTITY as Q_\n",
+    "from weldx.asdf.tags.weldx.core.iso_groove import get_groove\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -37,32 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0813fb1f5f149ff930bc67790010990",
+       "model_id": "9d92cb8ea2b74d6e958c31202423c95c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Dropdown(description='Groove:', options=('None', 'VGroove', 'UGroove', 'IGroove', 'UVGroove', 'VVGroove', 'HVG…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffb450d0e976415eb78eba5d6ccd3cc0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox()"
+       "VBox(children=(Dropdown(description='Groove:', options=('None', 'VGroove', 'UGroove', 'IGroove', 'UVGroove', '…"
       ]
      },
      "metadata": {},
@@ -92,6 +83,8 @@
     "        hbox_dict[item] = HBox([Label(\"code_number :\"), d])\n",
     "    elif \"angle\" in item:\n",
     "        hbox_dict[item] = hbox_FloatText_creator(item, \"deg\", 45)\n",
+    "    elif \"workpiece_thickness\" in item:\n",
+    "        hbox_dict[item] = hbox_FloatText_creator(item, \"mm\", 15)\n",
     "    else:\n",
     "        hbox_dict[item] = hbox_FloatText_creator(item, \"mm\", 5)\n",
     "\n",
@@ -121,7 +114,7 @@
     "groove_dict[\"UGroove\"] = [\"workpiece_thickness\", \"bevel_angle\", \"bevel_radius\", \"root_gap\", \"root_face\"]\n",
     "groove_dict[\"IGroove\"] = [\"workpiece_thickness\",\"root_gap\"]\n",
     "groove_dict[\"UVGroove\"] = [\"workpiece_thickness\", \"groove_angle\", \"bevel_angle\", \"bevel_radius\", \"root_gap\", \"root_face\"]\n",
-    "groove_dict[\"VGroove\"] = [\"workpiece_thickness\", \"groove_angle\", \"bevel_angle\", \"root_gap\", \"root_face\", \"root_face2\"]\n",
+    "groove_dict[\"VVGroove\"] = [\"workpiece_thickness\", \"groove_angle\", \"bevel_angle\", \"root_gap\", \"root_face\", \"root_face2\"]\n",
     "groove_dict[\"HVGroove\"] = [\"workpiece_thickness\", \"bevel_angle\", \"root_gap\", \"root_face\"]\n",
     "groove_dict[\"HUGroove\"] = [\"workpiece_thickness\", \"bevel_angle\", \"bevel_radius\", \"root_gap\", \"root_face\"]\n",
     "groove_dict[\"DoubleVGroove\"] = [\"workpiece_thickness\", \"groove_angle\", \"groove_angle2\", \"root_gap\", \"root_face\", \"root_face2\", \"root_face3\"]\n",
@@ -133,33 +126,36 @@
     "def remove_not_selected(change):\n",
     "    if groovetype_dropdown.value == \"None\":\n",
     "        selected_values_vbox.children = []\n",
-    "    elif groovetype_dropdown.value == \"VGroove\":\n",
-    "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[\"VGroove\"]]\n",
     "    else:\n",
-    "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[groovetype_dropdown.value]] #[x[1] for x in hbox_dict.items()]\n",
+    "        # korrekte slider zuteilen\n",
+    "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[groovetype_dropdown.value]] \n",
     "\n",
     "        \n",
+    "# plot gestaltung\n",
+    "o = widgets.Output()\n",
+    "        \n",
+    "def update_plot(change):\n",
+    "    if groovetype_dropdown.value != \"None\":\n",
+    "        with o:\n",
+    "            clear_output()\n",
+    "            get_groove_dict = dict()\n",
+    "            get_groove_dict[\"groove_type\"] = groovetype_dropdown.value\n",
+    "            for child in selected_values_vbox.children:\n",
+    "                get_groove_dict[child.children[0].value[:-2]] = Q_(child.children[1].value, child.children[2].value)\n",
+    "\n",
+    "            get_groove(**get_groove_dict).plot()\n",
+    "            plt.show()\n",
+    "        \n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
-    "    \n",
-    "display(groovetype_dropdown)\n",
-    "display(selected_values_vbox)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from weldx.asdf.tags.weldx.core.iso_groove import get_groove\n",
-    "from weldx.constants import WELDX_QUANTITY as Q_\n",
-    "v_groove = get_groove(\n",
-    "        groove_type=\"VGroove\",\n",
-    "        workpiece_thickness=Q_(9, \"mm\"),\n",
-    "        groove_angle=Q_(50, \"deg\"),\n",
-    "        root_face=Q_(4, \"mm\"),\n",
-    "        root_gap=Q_(2, \"mm\"),\n",
-    "    )"
+    "\n",
+    "groovetype_dropdown.observe(update_plot, \"value\")\n",
+    "for box in selected_values_vbox.children:\n",
+    "    box.observe(update_plot, \"value\")\n",
+    "\n",
+    "update_plot(None)\n",
+    "groove_selection = VBox([groovetype_dropdown, selected_values_vbox, o])\n",
+    " \n",
+    "display(groove_selection)"
    ]
   },
   {
