--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d92cb8ea2b74d6e958c31202423c95c",
+       "model_id": "1a8eb31e5b4a44ecab5ebc453c19e481",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,6 +145,9 @@
     "\n",
     "            get_groove(**get_groove_dict).plot()\n",
     "            plt.show()\n",
+    "    else:\n",
+    "        with o:\n",
+    "            clear_output()\n",
     "        \n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
     "\n",
