added interactive support for the groove attributes

--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a8eb31e5b4a44ecab5ebc453c19e481",
+       "model_id": "00ef59fcbeb74f9187d97b0831dc8626",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,12 +123,6 @@
     "groove_dict[\"DoubleHUGroove\"] = [\"workpiece_thickness\", \"bevel_angle\", \"bevel_angle2\", \"bevel_radius\", \"bevel_radius2\", \"root_gap\", \"root_face\", \"root_face2\", \"root_face3\"]\n",
     "groove_dict[\"FrontalFaceGroove\"] = [\"workpiece_thickness\", \"workpiece_thickness2\", \"groove_angle\", \"root_gap\", \"root_face\", \"special_depth\", \"code_number\"]\n",
     "\n",
-    "def remove_not_selected(change):\n",
-    "    if groovetype_dropdown.value == \"None\":\n",
-    "        selected_values_vbox.children = []\n",
-    "    else:\n",
-    "        # korrekte slider zuteilen\n",
-    "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[groovetype_dropdown.value]] \n",
     "\n",
     "        \n",
     "# plot gestaltung\n",
@@ -148,13 +142,20 @@
     "    else:\n",
     "        with o:\n",
     "            clear_output()\n",
-    "        \n",
+    "\n",
+    "def remove_not_selected(change):\n",
+    "    if groovetype_dropdown.value == \"None\":\n",
+    "        selected_values_vbox.children = []\n",
+    "    else:\n",
+    "        # korrekte slider zuteilen\n",
+    "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[groovetype_dropdown.value]] \n",
+    "\n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
-    "\n",
     "groovetype_dropdown.observe(update_plot, \"value\")\n",
-    "for box in selected_values_vbox.children:\n",
-    "    box.observe(update_plot, \"value\")\n",
+    "for _, box in hbox_dict.items():\n",
+    "    box.children[1].observe(update_plot, \"value\")\n",
     "\n",
+    "    \n",
     "update_plot(None)\n",
     "groove_selection = VBox([groovetype_dropdown, selected_values_vbox, o])\n",
     " \n",
