fixed a bug with FrontalFaceGrooves. they now are implemented too.

--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -35,6 +35,7 @@
     "    hbox = HBox([\n",
     "        Label(text + \" :\"),\n",
     "        widgets.FloatText(value=value),\n",
+    "        # TODO change label to text window to select own mesurement! with default...\n",
     "        Label(unit)\n",
     "    ])\n",
     "    return hbox"
@@ -42,18 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00ef59fcbeb74f9187d97b0831dc8626",
+       "model_id": "cc44f35738d24bc2857a03a55dd57116",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Groove:', options=('None', 'VGroove', 'UGroove', 'IGroove', 'UVGroove', '…"
+       "HBox(children=(VBox(children=(Dropdown(description='Groove:', options=('None', 'VGroove', 'UGroove', 'IGroove'…"
       ]
      },
      "metadata": {},
@@ -61,6 +62,7 @@
     }
    ],
    "source": [
+    "# all attributes used in get_groove - can we import them somehow??!\n",
     "attr_list = ['workpiece_thickness',\n",
     "             'workpiece_thickness2',\n",
     "             'root_gap',\n",
@@ -76,6 +78,7 @@
     "             'special_depth',\n",
     "             'code_number']\n",
     "\n",
+    "# create dict with hboxes of all attributes\n",
     "hbox_dict = dict()\n",
     "for item in attr_list:\n",
     "    if item == \"code_number\":\n",
@@ -89,6 +92,7 @@
     "        hbox_dict[item] = hbox_FloatText_creator(item, \"mm\", 5)\n",
     "\n",
     "groovetype_dropdown = widgets.Dropdown(\n",
+    "    # can we import those options form anywhere?!?\n",
     "    options=[\"None\",\n",
     "             \"VGroove\",\n",
     "             \"UGroove\",\n",
@@ -108,6 +112,7 @@
     "\n",
     "selected_values_vbox = VBox([])\n",
     "\n",
+    "# dict with groves Maybe import from anywhere?!?\n",
     "groove_dict = dict()\n",
     "groove_dict[\"None\"] = []\n",
     "groove_dict[\"VGroove\"] = [\"workpiece_thickness\", \"groove_angle\", \"root_gap\", \"root_face\"]\n",
@@ -123,9 +128,6 @@
     "groove_dict[\"DoubleHUGroove\"] = [\"workpiece_thickness\", \"bevel_angle\", \"bevel_angle2\", \"bevel_radius\", \"bevel_radius2\", \"root_gap\", \"root_face\", \"root_face2\", \"root_face3\"]\n",
     "groove_dict[\"FrontalFaceGroove\"] = [\"workpiece_thickness\", \"workpiece_thickness2\", \"groove_angle\", \"root_gap\", \"root_face\", \"special_depth\", \"code_number\"]\n",
     "\n",
-    "\n",
-    "        \n",
-    "# plot gestaltung\n",
     "o = widgets.Output()\n",
     "        \n",
     "def update_plot(change):\n",
@@ -135,7 +137,10 @@
     "            get_groove_dict = dict()\n",
     "            get_groove_dict[\"groove_type\"] = groovetype_dropdown.value\n",
     "            for child in selected_values_vbox.children:\n",
-    "                get_groove_dict[child.children[0].value[:-2]] = Q_(child.children[1].value, child.children[2].value)\n",
+    "                if child.children[0].value[:-2] == \"code_number\":\n",
+    "                    get_groove_dict[child.children[0].value[:-2]] = child.children[1].value\n",
+    "                else:\n",
+    "                    get_groove_dict[child.children[0].value[:-2]] = Q_(child.children[1].value, child.children[2].value)\n",
     "\n",
     "            get_groove(**get_groove_dict).plot()\n",
     "            plt.show()\n",
@@ -147,7 +152,7 @@
     "    if groovetype_dropdown.value == \"None\":\n",
     "        selected_values_vbox.children = []\n",
     "    else:\n",
-    "        # korrekte slider zuteilen\n",
+    "        # select correct sliders\n",
     "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[groovetype_dropdown.value]] \n",
     "\n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
@@ -157,9 +162,150 @@
     "\n",
     "    \n",
     "update_plot(None)\n",
-    "groove_selection = VBox([groovetype_dropdown, selected_values_vbox, o])\n",
+    "groove_selection = VBox([groovetype_dropdown, selected_values_vbox])\n",
+    "result = HBox([groove_selection, o])\n",
     " \n",
-    "display(groove_selection)"
+    "display(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7728d996cab54c6aa7fab857034b5583",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='Hello World', description='String:', placeholder='Type something')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.Text(\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d29be1f23ae0406d8afb9d231925f56a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='Hello World', description='String:', placeholder='Type something')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.Textarea(\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56420abab2004ec08505c622ad4a7d95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Combobox(value='John', description='Combobox:', ensure_option=True, options=('Paul', 'John', 'George', 'Ringo'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = widgets.Combobox(\n",
+    "    value='John',\n",
+    "    placeholder='Choose Someone',\n",
+    "    options=['Paul', 'John', 'George', 'Ringo'],\n",
+    "    description='Combobox:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False\n",
+    ")\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'John'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7d2ab0910b84a3f80086ff1ce41a42f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Click me', icon='check', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.Button(\n",
+    "    description='Click me',\n",
+    "    disabled=False,\n",
+    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Click me',\n",
+    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
+    ")"
    ]
   },
   {
