added minimum value to FloatText boxes

--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -34,7 +34,7 @@
     "def hbox_FloatText_creator(text, unit, value=7.5):\n",
     "    hbox = HBox([\n",
     "        Label(text + \" :\"),\n",
-    "        widgets.FloatText(value=value),\n",
+    "        widgets.BoundedFloatText(value=value, min=0),\n",
     "        # TODO change label to text window to select own mesurement! with default...\n",
     "        Label(unit)\n",
     "    ])\n",
@@ -43,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc44f35738d24bc2857a03a55dd57116",
+       "model_id": "75da8d54787f4023a73eacac25d00dac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,18 +165,20 @@
     "groove_selection = VBox([groovetype_dropdown, selected_values_vbox])\n",
     "result = HBox([groove_selection, o])\n",
     " \n",
-    "display(result)"
+    "display(result)\n",
+    "# TODO: code_number should change the choosen attributes or disable those not needed?!\n",
+    "# TODO: add layout - even out the boxes..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7728d996cab54c6aa7fab857034b5583",
+       "model_id": "dcb3f4ec1dd14f8b9154024184841255",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,13 +201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d29be1f23ae0406d8afb9d231925f56a",
+       "model_id": "d1d985c176ff4fa89d4becd342431a4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,13 +230,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56420abab2004ec08505c622ad4a7d95",
+       "model_id": "34dceb51ec5f485bb00c8a7f534468c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -269,43 +271,13 @@
        "'John'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7d2ab0910b84a3f80086ff1ce41a42f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Click me', icon='check', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "widgets.Button(\n",
-    "    description='Click me',\n",
-    "    disabled=False,\n",
-    "    button_style='', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Click me',\n",
-    "    icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    ")"
    ]
   },
   {
