added box for units.

--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "from ipywidgets import Checkbox, VBox, HBox, Label\n",
+    "from ipywidgets import Checkbox, VBox, HBox, Label, Text\n",
     "from IPython.display import clear_output\n",
     "\n",
     "from weldx.constants import WELDX_QUANTITY as Q_\n",
@@ -36,7 +36,7 @@
     "        Label(text + \" :\"),\n",
     "        widgets.BoundedFloatText(value=value, min=0),\n",
     "        # TODO change label to text window to select own mesurement! with default...\n",
-    "        Label(unit)\n",
+    "        Text(value=unit, placeholder='Enter valid unit'),\n",
     "    ])\n",
     "    return hbox"
    ]
@@ -49,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75da8d54787f4023a73eacac25d00dac",
+       "model_id": "2fbc4f1de4824cacad9d50e6c3e0a430",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,7 +167,8 @@
     " \n",
     "display(result)\n",
     "# TODO: code_number should change the choosen attributes or disable those not needed?!\n",
-    "# TODO: add layout - even out the boxes..."
+    "# TODO: add layout - even out the boxes...\n",
+    "# TODO: asdf save button"
    ]
   },
   {
@@ -178,12 +179,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcb3f4ec1dd14f8b9154024184841255",
+       "model_id": "bbe385fac7344b73a1a51af6799ea5bd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Text(value='Hello World', description='String:', placeholder='Type something')"
+       "Text(value='', placeholder='Enter valid unit')"
       ]
      },
      "metadata": {},
@@ -192,92 +193,9 @@
    ],
    "source": [
     "widgets.Text(\n",
-    "    value='Hello World',\n",
-    "    placeholder='Type something',\n",
-    "    description='String:',\n",
-    "    disabled=False\n",
+    "    value=None,\n",
+    "    placeholder='Enter valid unit',\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1d985c176ff4fa89d4becd342431a4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Textarea(value='Hello World', description='String:', placeholder='Type something')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "widgets.Textarea(\n",
-    "    value='Hello World',\n",
-    "    placeholder='Type something',\n",
-    "    description='String:',\n",
-    "    disabled=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34dceb51ec5f485bb00c8a7f534468c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Combobox(value='John', description='Combobox:', ensure_option=True, options=('Paul', 'John', 'George', 'Ringo'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "x = widgets.Combobox(\n",
-    "    value='John',\n",
-    "    placeholder='Choose Someone',\n",
-    "    options=['Paul', 'John', 'George', 'Ringo'],\n",
-    "    description='Combobox:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False\n",
-    ")\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'John'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.value"
    ]
   },
   {
