--- a/scripts/groove_selection_dashboard.ipynb
+++ b/scripts/groove_selection_dashboard.ipynb
@@ -12,14 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "from ipywidgets import Checkbox, VBox, HBox, Label, Text\n",
+    "from ipywidgets import Checkbox, VBox, HBox, Label, Text, AppLayout, Button, Layout\n",
     "from IPython.display import clear_output\n",
     "\n",
+    "import weldx\n",
     "from weldx.constants import WELDX_QUANTITY as Q_\n",
     "from weldx.asdf.tags.weldx.core.iso_groove import get_groove\n",
     "import matplotlib.pyplot as plt"
@@ -27,34 +28,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_layout = Layout(width=\"60%\", height=\"350px\")\n",
+    "button_layout = Layout(width=\"200px\", height=\"50px\")\n",
+    "textbox_layout = Layout(width=\"15%\", height=\"25px\")\n",
+    "description_layout = Layout(width=\"30%\", height=\"25px\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hbox_FloatText_creator(text, unit, value=7.5):\n",
     "    hbox = HBox([\n",
-    "        Label(text + \" :\"),\n",
-    "        widgets.BoundedFloatText(value=value, min=0),\n",
+    "        Label(text + \" :\", layout=description_layout),\n",
+    "        widgets.BoundedFloatText(value=value, min=0, layout=textbox_layout),\n",
     "        # TODO change label to text window to select own mesurement! with default...\n",
-    "        Text(value=unit, placeholder='Enter valid unit'),\n",
+    "        Text(value=unit, placeholder='unit', layout=textbox_layout),\n",
     "    ])\n",
     "    return hbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fbc4f1de4824cacad9d50e6c3e0a430",
+       "model_id": "5331683b9223408ebe9fef3f5c597bc6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(Dropdown(description='Groove:', options=('None', 'VGroove', 'UGroove', 'IGroove'…"
+       "VBox(children=(HBox(children=(VBox(children=(Dropdown(description='Groove type :', options=('None', 'VGroove',…"
       ]
      },
      "metadata": {},
@@ -82,8 +95,8 @@
     "hbox_dict = dict()\n",
     "for item in attr_list:\n",
     "    if item == \"code_number\":\n",
-    "        d = widgets.Dropdown(options=[\"1.12\", \"1.13\", \"2.12\", \"3.1.1\", \"3.1.2\", \"3.1.3\", \"4.1.1\", \"4.1.2\", \"4.1.3\"])\n",
-    "        hbox_dict[item] = HBox([Label(\"code_number :\"), d])\n",
+    "        d = widgets.Dropdown(options=[\"1.12\", \"1.13\", \"2.12\", \"3.1.1\", \"3.1.2\", \"3.1.3\", \"4.1.1\", \"4.1.2\", \"4.1.3\"], layout=description_layout)\n",
+    "        hbox_dict[item] = HBox([Label(\"code_number :\", layout=description_layout), d])\n",
     "    elif \"angle\" in item:\n",
     "        hbox_dict[item] = hbox_FloatText_creator(item, \"deg\", 45)\n",
     "    elif \"workpiece_thickness\" in item:\n",
@@ -107,7 +120,7 @@
     "             \"DoubleHUGroove\",\n",
     "             \"FrontalFaceGroove\"],\n",
     "    value='None',\n",
-    "    description='Groove:',\n",
+    "    description='Groove type :',\n",
     ")\n",
     "\n",
     "selected_values_vbox = VBox([])\n",
@@ -128,7 +141,8 @@
     "groove_dict[\"DoubleHUGroove\"] = [\"workpiece_thickness\", \"bevel_angle\", \"bevel_angle2\", \"bevel_radius\", \"bevel_radius2\", \"root_gap\", \"root_face\", \"root_face2\", \"root_face3\"]\n",
     "groove_dict[\"FrontalFaceGroove\"] = [\"workpiece_thickness\", \"workpiece_thickness2\", \"groove_angle\", \"root_gap\", \"root_face\", \"special_depth\", \"code_number\"]\n",
     "\n",
-    "o = widgets.Output()\n",
+    "o = widgets.Output(layout=plot_layout)\n",
+    "actual_groove = None\n",
     "        \n",
     "def update_plot(change):\n",
     "    if groovetype_dropdown.value != \"None\":\n",
@@ -142,7 +156,8 @@
     "                else:\n",
     "                    get_groove_dict[child.children[0].value[:-2]] = Q_(child.children[1].value, child.children[2].value)\n",
     "\n",
-    "            get_groove(**get_groove_dict).plot()\n",
+    "            actual_groove = get_groove(**get_groove_dict)\n",
+    "            actual_groove.plot()\n",
     "            plt.show()\n",
     "    else:\n",
     "        with o:\n",
@@ -155,47 +170,41 @@
     "        # select correct sliders\n",
     "        selected_values_vbox.children = [slider for key, slider in hbox_dict.items() if key in groove_dict[groovetype_dropdown.value]] \n",
     "\n",
+    "button_o = widgets.Output()        \n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    with button_o:\n",
+    "        clear_output()\n",
+    "        buffer = weldx.asdf.utils._write_buffer(actual_groove)\n",
+    "        weldx.asdf.utils.notebook_fileprinter(buffer)\n",
+    "        \n",
+    "# observe\n",
     "groovetype_dropdown.observe(remove_not_selected, names='value')\n",
     "groovetype_dropdown.observe(update_plot, \"value\")\n",
     "for _, box in hbox_dict.items():\n",
     "    box.children[1].observe(update_plot, \"value\")\n",
     "\n",
-    "    \n",
+    "\n",
+    "# button\n",
+    "save_as_asdf = Button(\n",
+    "    description= \"Show as .yml File\",\n",
+    "    layout=button_layout\n",
+    ")\n",
+    "save_as_asdf.on_click(on_button_clicked)\n",
+    "\n",
+    "# create rest\n",
     "update_plot(None)\n",
     "groove_selection = VBox([groovetype_dropdown, selected_values_vbox])\n",
-    "result = HBox([groove_selection, o])\n",
+    "result = VBox([HBox([groove_selection, o]), save_as_asdf, button_o])\n",
     " \n",
     "display(result)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# TODO: code_number should change the choosen attributes or disable those not needed?!\n",
     "# TODO: add layout - even out the boxes...\n",
     "# TODO: asdf save button"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbe385fac7344b73a1a51af6799ea5bd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='', placeholder='Enter valid unit')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "widgets.Text(\n",
-    "    value=None,\n",
-    "    placeholder='Enter valid unit',\n",
-    ")"
    ]
   },
   {
